Ranking Domain Intialised
